commit 3 moments: - Center the scale and numbers under the beam - Fix scale number alignment - Adjust beam and scale width calculation in JS

--- a/MrNLPhysicsLab/GCSE/moments/moments-styles.css
+++ b/MrNLPhysicsLab/GCSE/moments/moments-styles.css
@@ -404,8 +404,6 @@ h6 {
     bottom: 40px;
     width: 90%;
     height: 20px;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 .scale-mark {
